Añadir funcionalidad de JWT que se inyecten en el header el token directamente, hecho ApiRest y cliente

--- a/Api/ApiRestCasino/nbproject/project.properties
+++ b/Api/ApiRestCasino/nbproject/project.properties
@@ -79,6 +79,9 @@ file.reference.jersey-media-jaxb-3.1.3.jar=lib\\jakartaee10\\jersey-media-jaxb-3
 file.reference.jersey-media-json-binding-3.1.3.jar=lib\\jakartaee10\\jersey-media-json-binding-3.1.3.jar
 file.reference.jersey-media-moxy-3.1.3.jar=lib\\jakartaee10\\jersey-media-moxy-3.1.3.jar
 file.reference.jersey-server-3.1.3.jar=lib\\jakartaee10\\jersey-server-3.1.3.jar
+file.reference.jjwt-api-0.12.6.jar=lib\\JWT\\jjwt-api-0.12.6.jar
+file.reference.jjwt-impl-0.12.6.jar=lib\\JWT\\jjwt-impl-0.12.6.jar
+file.reference.jjwt-jackson-0.12.3.jar=lib\\JWT\\jjwt-jackson-0.12.3.jar
 file.reference.mysql-connector-j-8.0.33.jar=lib\\bd-mysql\\mysql-connector-j-8.0.33.jar
 file.reference.org.eclipse.persistence.antlr-2.7.13.jar=lib\\jakartaee10\\org.eclipse.persistence.antlr-2.7.13.jar
 file.reference.org.eclipse.persistence.asm-9.5.0.jar=lib\\jakartaee10\\org.eclipse.persistence.asm-9.5.0.jar
@@ -162,7 +165,10 @@ javac.classpath=\
     ${file.reference.parsson-1.1.1.jar}:\
     ${file.reference.yasson-3.0.3.jar}:\
     ${file.reference.gson-2.10.1.jar}:\
-    ${file.reference.jbcrypt-0.4.jar}
+    ${file.reference.jbcrypt-0.4.jar}:\
+    ${file.reference.jjwt-api-0.12.6.jar}:\
+    ${file.reference.jjwt-impl-0.12.6.jar}:\
+    ${file.reference.jjwt-jackson-0.12.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
