Arreglar bugs del ApiRest y acabar de añadir JJWT, añadir música de fondo para todas las pantallas y en futuro probar en android el jjwt que lo haga bien.

--- a/Api/ApiRestCasino/nbproject/project.properties
+++ b/Api/ApiRestCasino/nbproject/project.properties
@@ -80,8 +80,8 @@ file.reference.jersey-media-json-binding-3.1.3.jar=lib\\jakartaee10\\jersey-medi
 file.reference.jersey-media-moxy-3.1.3.jar=lib\\jakartaee10\\jersey-media-moxy-3.1.3.jar
 file.reference.jersey-server-3.1.3.jar=lib\\jakartaee10\\jersey-server-3.1.3.jar
 file.reference.jjwt-api-0.12.6.jar=lib\\JWT\\jjwt-api-0.12.6.jar
+file.reference.jjwt-gson-0.12.6.jar=lib\\JWT\\jjwt-gson-0.12.6.jar
 file.reference.jjwt-impl-0.12.6.jar=lib\\JWT\\jjwt-impl-0.12.6.jar
-file.reference.jjwt-jackson-0.12.3.jar=lib\\JWT\\jjwt-jackson-0.12.3.jar
 file.reference.mysql-connector-j-8.0.33.jar=lib\\bd-mysql\\mysql-connector-j-8.0.33.jar
 file.reference.org.eclipse.persistence.antlr-2.7.13.jar=lib\\jakartaee10\\org.eclipse.persistence.antlr-2.7.13.jar
 file.reference.org.eclipse.persistence.asm-9.5.0.jar=lib\\jakartaee10\\org.eclipse.persistence.asm-9.5.0.jar
@@ -168,7 +168,7 @@ javac.classpath=\
     ${file.reference.jbcrypt-0.4.jar}:\
     ${file.reference.jjwt-api-0.12.6.jar}:\
     ${file.reference.jjwt-impl-0.12.6.jar}:\
-    ${file.reference.jjwt-jackson-0.12.3.jar}
+    ${file.reference.jjwt-gson-0.12.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
