--- a/Aplicacion_android/Casino/gradle/libs.versions.toml
+++ b/Aplicacion_android/Casino/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ activityCompose = "1.10.1"
 composeBom = "2025.03.01"
 
 lottieCompose = "6.3.0"
+media3Exoplayer = "1.6.0"
 pmdmIesBalmisVersion = "24.1"
 ksp = "2.0.20-1.0.25"
 hilt = "2.52"
@@ -28,6 +29,7 @@ appcompat = "1.7.0"
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3Exoplayer" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
