--- a/Aplicacion_android/Casino/app/src/main/AndroidManifest.xml
+++ b/Aplicacion_android/Casino/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:appCategory="game"
         android:supportsRtl="true"
         android:theme="@style/Theme.Casino"
         android:usesCleartextTraffic="true"
